rename the page and fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 
 .form__container {
   margin: 20px;
-  height: 92vh;
+  height: 88vh;
   box-shadow: 1px -10px 25px rgba(201, 201, 201, 0.25),
     -1px 10px 25px rgba(147, 147, 147, 0.25);
 }
@@ -61,9 +61,40 @@ input {
   font-weight: 500;
 }
 
+.signup__button1 {
+  width: 132px;
+  height: 49px;
+  cursor: pointer;
+  background: #1678cb;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+}
+
 .signup__button:hover {
   background: #ffffff;
   border: 1px solid #1678cb;
+  color: #1678cb;
+}
+
+.signup__button1:hover {
+  background: #ffffff;
+  border: 1px solid #1678cb;
+  color: #1678cb;
+}
+
+.next__step {
+  color: #ffffff;
+  font-weight: 600;
+  object-fit: contain;
+}
+
+
+.next__step:hover{
   color: #1678cb;
 }
 
